# box2d-go

./: .gitignore  MERGE_CONFLICTS.md  README.md  SOLUTION_SUMMARY.md  box2d.go  box2d.go.backup  box2d_test.go  go.mod
examples/: correct_usage.go  test_new_features.go
go-box2d/: .gitignore  INSTALL_TEST.md  README.md  box2d.go
go-box2d/clib/: CMakeLists.txt
go-box2d/examples/: hello_world.go  stacking.go
